--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -2083,6 +2083,7 @@ body {
 
 .certs_cards {
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  margin-bottom: 56px;
 }
 .certs_cards .cert_card {
   width: 227px;
@@ -2105,4 +2106,61 @@ body {
   transform: scale(120%);
   height: 100%;
   width: auto;
+}
+
+.cert_card_item a {
+  font-family: "sf-pro-display_medium";
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 20px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: #69696d;
+  text-align: center;
+  text-decoration: none;
+  margin-top: 12px;
+}
+
+.ZTD_wrapper {
+  margin-top: 80px;
+  background-image: url(/assets/img/AboutUs/ZTKBackgrond.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  max-width: 100%;
+  height: 531px;
+  position: relative;
+  border-radius: 40px;
+}
+
+.ZTD_content {
+  position: absolute;
+  max-width: 953px;
+  overflow: hidden;
+  top: 10%;
+  left: 5%;
+  bottom: 10%;
+}
+.ZTD_content img {
+  margin-bottom: 24px;
+}
+.ZTD_content h6 {
+  margin-top: 24px;
+  font-family: "sf-pro-display_title";
+  color: #2c2d2e;
+}
+.ZTD_content p {
+  margin-top: 40px;
+  color: #69696d;
+  font-family: "sf-pro-display_medium";
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0em;
+  text-align: left;
+  text-decoration: none;
+}
+
+.about_us_swiper {
+  margin-top: 50px;
+  margin-bottom: 150px;
 }/*# sourceMappingURL=style.css.map */
