--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1315,6 +1315,9 @@ body {
   .tile {
     margin: 0;
   }
+  .subscribe_form {
+    padding-right: 25px;
+  }
 }
 @media screen and (max-width: 992px) {
   .content {
@@ -2048,7 +2051,7 @@ body {
   height: 327px;
   gap: 32px;
   padding-left: 32px;
-  padding-right: 61px;
+  padding-right: 32px;
   padding-top: 64px;
   padding-bottom: 40px;
   overflow: hidden;
@@ -2123,18 +2126,20 @@ body {
 
 .ZTD_wrapper {
   margin-top: 80px;
-  background-image: url(/assets/img/AboutUs/ZTKBackgrond.png);
+  background-image: url(/assets/img/AboutUs/Frame\ 4979.png);
   background-repeat: no-repeat;
   background-position: center;
   max-width: 100%;
-  height: 531px;
-  position: relative;
+  padding-left: 72px;
+  padding-top: 110px;
+  padding-bottom: 101px;
   border-radius: 40px;
 }
 
 .ZTD_content {
-  position: absolute;
+  /* position: absolute; */
   max-width: 953px;
+  /* height: 1000px; */
   overflow: hidden;
   top: 10%;
   left: 5%;
@@ -2163,4 +2168,230 @@ body {
 .about_us_swiper {
   margin-top: 50px;
   margin-bottom: 150px;
+}
+
+.about_us_wrapper {
+  overflow: hidden;
+}
+
+@media screen and (max-width: 1520px) {
+  .certs_cards {
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    /* .cert_card {
+      width: 145px;
+      height: 178px;
+    } */
+  }
+}
+@media screen and (max-width: 1300px) {
+  .ab_us_advantages .ab_us_advantages_tiles {
+    justify-content: center;
+    justify-items: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 32px;
+  }
+  .certs_cards {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+  .certs_cards .cert_card {
+    width: 145px;
+    height: 178px;
+  }
+  .ZTD_wrapper {
+    height: auto;
+    padding-bottom: 0;
+    background-position: right;
+    background-size: cover;
+    padding-left: 30px;
+    padding-right: 40px;
+    padding-top: 15px;
+  }
+  .ZTD_content {
+    height: auto;
+  }
+  .ZTD_content h6 {
+    margin-top: 0;
+  }
+}
+@media screen and (max-width: 1210px) {
+  .ab_us_advantages .ab_us_advantages_tiles {
+    justify-content: center;
+    justify-items: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 32px;
+  }
+  .certs_cards {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+  .certs_cards .cert_card {
+    width: 145px;
+    height: 178px;
+  }
+  .ZTD_wrapper {
+    height: auto;
+    padding-bottom: 0;
+    background-position: right;
+    background-size: cover;
+    padding-left: 30px;
+    padding-right: 40px;
+    padding-top: 15px;
+  }
+  .ZTD_content {
+    height: auto;
+  }
+  .ZTD_content h6 {
+    margin-top: 0;
+  }
+}
+@media screen and (max-width: 992px) {
+  .ab_us_advantages .ab_us_advantages_tiles {
+    justify-content: center;
+    justify-items: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 32px;
+  }
+  .certs_cards {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+  .certs_cards .cert_card {
+    width: 145px;
+    height: 178px;
+  }
+  .ZTD_wrapper {
+    height: auto;
+    padding-bottom: 0;
+    background-position: right;
+    background-size: cover;
+    padding-left: 30px;
+    padding-right: 40px;
+    padding-top: 15px;
+  }
+  .ZTD_content {
+    height: auto;
+  }
+  .ZTD_content h6 {
+    margin-top: 0;
+  }
+}
+@media screen and (max-width: 768px) {
+  .about-us-video-container {
+    border-radius: 0;
+    overflow: hidden;
+    max-width: 100%;
+  }
+  .about-us-video-container iframe {
+    height: 341px;
+    transform: scale(330%);
+  }
+  .about_us_title h1,
+  .about_us_title h6 {
+    margin-left: 53px;
+    margin-right: 53px;
+    text-align: left;
+  }
+  .about_us_title_below {
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 30px;
+    letter-spacing: 0px;
+    text-align: left;
+  }
+  .about_us_subtitle_below {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 21px;
+    letter-spacing: 0em;
+    text-align: left;
+  }
+  .ab_us_advantages .ab_us_advantages_tiles {
+    justify-content: center;
+    justify-items: center;
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 32px;
+  }
+  .advantage_tile {
+    height: -moz-fit-content;
+    height: fit-content;
+    border-radius: 32px;
+    height: fit-content;
+    padding-top: 34px;
+  }
+  .advantage_tile p {
+    height: -moz-fit-content;
+    height: fit-content;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 21px;
+  }
+  .advantage_tile h1 {
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 30px;
+    letter-spacing: 0px;
+    text-align: left;
+  }
+  .ab_us_advantages {
+    padding-left: 53px;
+    padding-right: 53px;
+  }
+  .ab_us_advantages h1 {
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 36px;
+    letter-spacing: 0px;
+    text-align: left;
+  }
+  .ZTD_wrapper {
+    height: auto;
+    padding-bottom: 0;
+    background-position: right;
+    background-size: cover;
+    padding-left: 30px;
+    padding-right: 40px;
+    padding-top: 15px;
+  }
+  .ZTD_content {
+    height: auto;
+  }
+  .ZTD_content h1 {
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 36px;
+    letter-spacing: 0px;
+    text-align: left;
+  }
+  .ZTD_content h6 {
+    margin-top: 0;
+  }
+  .ZTD_content p {
+    margin-top: 0;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 21px;
+  }
+  .certs_cards {
+    grid-template-columns: 1fr 1fr;
+  }
+  .certs_cards .cert_card {
+    width: 145px;
+    height: 178px;
+  }
+  .cert_card {
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+  .title {
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 36px;
+    letter-spacing: 0px;
+    text-align: left;
+  }
+  .partners_title {
+    padding-left: 53px;
+  }
 }/*# sourceMappingURL=style.css.map */
