--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -2460,7 +2460,7 @@ body {
 
 .subscribe_form.call_us {
   padding: 0;
-  max-width: 444px;
+  width: 444px;
   font-family: "sf-pro-display_medium";
   margin-top: 0;
 }
@@ -2494,7 +2494,7 @@ body {
     padding: 16px 24px 40px 24px;
   }
   .subscribe_form.call_us {
-    max-width: none;
+    width: auto;
   }
   .call_us h1 {
     font-size: 24px;
