--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -115,6 +115,15 @@ body {
   border-radius: 32px;
 }
 
+.arrow {
+  transform: rotate(0deg);
+  transition: all 0.5s;
+}
+
+.arrow.pressed {
+  transform: rotate(-180deg);
+}
+
 .grid_tiles {
   justify-content: center;
   justify-items: center;
@@ -2111,6 +2120,9 @@ body {
   width: auto;
 }
 
+.cert_card_item {
+  margin-bottom: 30px;
+}
 .cert_card_item a {
   font-family: "sf-pro-display_medium";
   font-size: 14px;
@@ -2122,6 +2134,14 @@ body {
   text-align: center;
   text-decoration: none;
   margin-top: 12px;
+}
+
+.cert_card_item:nth-child(n+7) {
+  display: none;
+}
+
+.cert_card_item.visible {
+  display: block;
 }
 
 .ZTD_wrapper {
@@ -2172,6 +2192,10 @@ body {
 
 .about_us_wrapper {
   overflow: hidden;
+}
+
+.partners_title {
+  padding-left: 200px;
 }
 
 @media screen and (max-width: 1520px) {
@@ -2277,6 +2301,13 @@ body {
   }
 }
 @media screen and (max-width: 768px) {
+  .certs {
+    padding-left: 23px;
+    padding-right: 23px;
+  }
+  .cert_card_item {
+    margin-bottom: 20px;
+  }
   .about-us-video-container {
     border-radius: 0;
     overflow: hidden;
@@ -2420,6 +2451,9 @@ body {
 .supp_description h6 img {
   position: absolute;
   right: 0;
+  top: 0;
+  width: 30px;
+  transform: rotate(180deg);
 }
 .supp_description p {
   max-width: 881px;
@@ -2430,6 +2464,17 @@ body {
   line-height: 24px;
   letter-spacing: 0em;
   text-align: left;
+  display: none;
+  transition: all 0.5s;
+}
+
+.supple-or-creator-text.isShownText {
+  display: inline-block;
+  transition: all 0.5s;
+}
+
+.how-to-become-supplier-text.isShownText {
+  display: inline-block;
 }
 
 .call_us {
