--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -7,6 +7,10 @@
   font-family: "sf-pro-display_medium";
   src: url("/assets/fonts/SF/SF-Pro-Display-Light.otf");
 }
+@font-face {
+  font-family: "sf-pro-display_cursive";
+  src: url("/assets/fonts/SF/SF-Pro-Display-HeavyItalic.otf");
+}
 html,
 body {
   min-height: 100%;
@@ -87,9 +91,12 @@ body {
   align-items: center;
   display: flex;
   font-size: 14px;
-  font-family: "sf-pro-display_medium";
+  font-family: "sf-pro-display_title";
   font-weight: 600;
   margin-bottom: 0;
+}
+.info img {
+  margin-left: 15px;
 }
 
 .contacts {
@@ -100,7 +107,7 @@ body {
   margin-left: 208px;
   font-size: 14px;
   font-weight: 600;
-  font-family: "sf-pro-display_medium";
+  font-family: "sf-pro-display_title";
   position: absolute;
   right: 0;
 }
@@ -197,10 +204,12 @@ body {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  background-color: #ecedf0;
+  background-color: #ecedf0 !important;
   /* border: 1px solid; */
   margin-right: 135px;
   border-radius: 12px;
+  background: url(/assets/charm_search.svg) no-repeat 3px 1px;
+  background-position: 97%;
 }
 
 .icon_container {
@@ -253,6 +262,7 @@ body {
 }
 
 .catalog_btn {
+  width: 134px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -266,7 +276,6 @@ body {
   font-size: 16px;
   font-weight: 600;
   line-height: 20px;
-  letter-spacing: 0px;
   text-align: left;
   color: #fff;
 }
@@ -418,6 +427,14 @@ body {
   text-align: left;
   margin-bottom: 24px;
 }
+.products_wrapper h2 span {
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 20px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: #69696d;
+}
 
 .category_cards {
   justify-content: center;
@@ -481,6 +498,12 @@ body {
 /*------------------------------------ Новые поступления Акции ---------------------------------*/
 .new {
   margin-top: 50px;
+  position: relative;
+}
+.new .link {
+  position: absolute;
+  right: 0;
+  top: 0;
 }
 
 .switcher {
@@ -532,6 +555,7 @@ body {
 }
 
 .sales_cards {
+  gap: 32px;
   margin-top: 32px;
   justify-content: center;
   justify-items: center;
@@ -595,8 +619,9 @@ body {
 }
 
 .cart-btn {
-  display: block;
-  max-width: 100%;
+  display: inline-block;
+  /* max-width: 100%; */
+  width: 100%;
   background-color: #e6e7eb;
   border: none;
   border-radius: 12px;
@@ -839,7 +864,7 @@ body {
 }
 .actual .actual_title span {
   color: #28399e;
-  font-style: oblique;
+  font-family: "sf-pro-display_cursive";
 }
 
 .actual_items {
@@ -895,7 +920,6 @@ body {
 }
 
 .actual_item div {
-  padding-left: 53px;
   padding-right: 53px;
 }
 .actual_item img {
@@ -905,6 +929,7 @@ body {
   -o-object-fit: cover;
      object-fit: cover;
   height: 167px;
+  border-radius: 32px;
 }
 
 .actual_item_title {
@@ -977,14 +1002,17 @@ body {
   padding-left: 32px;
 }
 .subscribe_form button {
+  height: 72px;
   display: block;
   border: none;
   border-radius: 16px;
   background-color: #4865d9;
-  font-family: "SF Pro Display", sans-serif;
+  font-family: "sf-pro-display_title";
   color: #fff;
   padding: 18px 40px 18px 40px;
   margin-top: 48px;
+  font-size: 20px;
+  line-height: 24px;
 }
 
 /*------------------------------------ Подписаться ---------------------------------*/
@@ -1033,7 +1061,7 @@ body {
 .section_social ul li {
   word-wrap: break-word;
   list-style-type: none;
-  display: flex;
+  margin-right: 32px;
   margin-bottom: 16px;
   font-family: "SF Pro Display", sans-serif;
   font-size: 16px;
@@ -1041,6 +1069,7 @@ body {
   line-height: 20px;
   letter-spacing: 0em;
   text-align: left;
+  display: flex;
 }
 
 .section_social ul li img {
@@ -1052,13 +1081,17 @@ body {
 }
 
 .footer_contacts {
+  gap: 50px;
   display: grid;
-  grid-template-columns: 180px 180px 180px;
+  grid-template-columns: 180px 180px 180px 180px;
   grid-template-rows: min-content;
 }
 .footer_contacts ul {
   list-style-type: none;
   padding-left: 0;
+}
+.footer_contacts ul li {
+  text-align: left;
 }
 
 .footer_phone,
@@ -1075,6 +1108,7 @@ body {
   line-height: 24px;
   letter-spacing: 0em;
   text-align: left;
+  color: #2c2d2e;
 }
 
 .footer_phone h5,
@@ -1089,8 +1123,8 @@ body {
   text-align: left;
 }
 
-.section_social {
-  margin-right: 25px;
+.section_social ul {
+  display: flex;
 }
 
 .section ul,
@@ -1120,6 +1154,123 @@ body {
 
 .footer_pay ul li {
   margin-right: 20px;
+}
+
+.footer_mobile {
+  display: none;
+  width: 100%;
+  padding-top: 28px;
+  padding-right: 53px;
+  padding-left: 53px;
+  margin-bottom: 88px;
+  background-color: rgb(232, 234, 244);
+}
+.footer_mobile .social_items_mobile img {
+  width: 24px;
+  height: 32px;
+  margin-right: 16px;
+}
+.footer_mobile .footer_pay h5,
+.footer_mobile .footer_adres h5 {
+  font-family: "sf-pro-display_title";
+  font-size: 10px;
+  font-weight: 600;
+  line-height: 15px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: #2c2d2e;
+}
+.footer_mobile .footer_pay ul,
+.footer_mobile .footer_adres ul {
+  padding-left: 0;
+}
+.footer_mobile .footer_pay ul li,
+.footer_mobile .footer_adres ul li {
+  list-style-type: none;
+  list-style-type: none;
+  font-family: "SF Pro Display", sans-serif;
+  font-size: 10px;
+  font-weight: 400;
+  line-height: 15px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: #2c2d2e;
+}
+.footer_mobile .footer_pay .link,
+.footer_mobile .footer_adres .link {
+  font-size: 10px;
+}
+
+.footer_m_wrapper {
+  max-width: 324px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+}
+.footer_m_wrapper .section_nav_mobile ul {
+  padding-left: 0;
+  padding-right: 15px;
+  width: 100%;
+}
+.footer_m_wrapper .section_nav_mobile ul li {
+  list-style-type: none;
+  font-family: "SF Pro Display", sans-serif;
+  font-size: 10px;
+  font-weight: 400;
+  line-height: 15px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: #2c2d2e;
+}
+.footer_m_wrapper .section_products_mobile ul {
+  padding: 0;
+  width: 100%;
+}
+.footer_m_wrapper .section_products_mobile ul li {
+  list-style-type: none;
+  font-family: "SF Pro Display", sans-serif;
+  font-size: 10px;
+  font-weight: 400;
+  line-height: 15px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: #2c2d2e;
+}
+
+.footer-m-email-phone {
+  display: flex;
+  margin: 0 auto;
+  justify-content: start;
+}
+.footer-m-email-phone .footer_email,
+.footer-m-email-phone .footer_phone {
+  width: 50%;
+}
+.footer-m-email-phone .footer_email ul,
+.footer-m-email-phone .footer_phone ul {
+  list-style-type: none;
+  padding-left: 0;
+  padding-right: 15px;
+}
+.footer-m-email-phone .footer_email ul li,
+.footer-m-email-phone .footer_phone ul li {
+  font-family: "SF Pro Display", sans-serif;
+  font-size: 10px;
+  font-weight: 400;
+  line-height: 15px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: #69696d;
+}
+.footer-m-email-phone .footer_email h5,
+.footer-m-email-phone .footer_phone h5 {
+  font-family: "sf-pro-display_title";
+  font-size: 10px;
+  font-weight: 600;
+  line-height: 15px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: #2c2d2e;
 }
 
 @media screen and (max-width: 1210px) {
@@ -1168,9 +1319,6 @@ body {
   }
   .section_last {
     display: block;
-  }
-  .footer_contacts {
-    grid-template-columns: 1fr 1fr;
   }
 }
 .burger {
@@ -1267,7 +1415,7 @@ body {
   .section {
     justify-content: space-between;
     margin-right: 0;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
   }
   .details {
     -moz-columns: 2;
@@ -1275,9 +1423,6 @@ body {
   }
   .section_last {
     display: block;
-  }
-  .footer_contacts {
-    grid-template-columns: 1fr 1fr;
   }
   .footer_pay ul {
     /* flex-direction: column; */
@@ -1289,7 +1434,7 @@ body {
     display: none;
   }
   .social_items_mobile {
-    display: block;
+    display: flex;
     margin-bottom: 30px;
     margin-top: 20px;
   }
@@ -1337,6 +1482,11 @@ body {
   }
   .footer {
     margin-bottom: 88px;
+  }
+  .footer_contacts {
+    margin-top: 40px;
+    grid-template-columns: 180px 180px 180px;
+    margin: 0 auto;
   }
   .catalog_dropdown-btn {
     display: inline-block;
@@ -1631,9 +1781,9 @@ body {
   .section_last {
     display: block;
   }
-  .footer_contacts {
+  /* .footer_contacts {
     grid-template-columns: 1fr 1fr;
-  }
+  } */
   .details {
     -moz-columns: 2;
          columns: 2;
@@ -1670,9 +1820,6 @@ body {
   }
   .section_last {
     display: block;
-  }
-  .footer_contacts {
-    grid-template-columns: 1fr 1fr;
   }
   .section_last ul {
     margin-top: 25px;
@@ -2543,5 +2690,350 @@ body {
   }
   .call_us h1 {
     font-size: 24px;
+  }
+}
+.catalog_btn {
+  width: 134px;
+  height: 48px;
+  padding: 18px 40px 18px 40px;
+  border-radius: 12px;
+  gap: 10px;
+  background-color: #4865d9;
+  font-family: "SF Pro Display", sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 20px;
+  letter-spacing: 0px;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 51px;
+  margin-right: 16px;
+}
+
+.contacts_container {
+  max-width: 1520px;
+  margin-top: 48px;
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 48px;
+}
+
+.contacts_title {
+  font-family: "SF Pro Display", sans-serif;
+  font-size: 40px;
+  font-weight: 600;
+  line-height: 40px;
+  text-align: left;
+  margin-bottom: 48px;
+}
+
+.contacts_section {
+  display: flex;
+}
+
+.item1,
+.item2 {
+  width: 100%;
+  background-color: #ffffff;
+  border-radius: 24px;
+}
+
+.item1 {
+  margin-right: 12px;
+}
+
+.item1_text,
+.item2_text {
+  padding-left: 24px;
+  padding-top: 16px;
+  width: 469px;
+  height: 188px;
+}
+
+.item1_text h5,
+.item2_text h5 {
+  margin-bottom: 16px;
+  font-family: "SF Pro Display", sans-serif;
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 24px;
+  letter-spacing: 0px;
+  text-align: left;
+}
+
+.item1_text p,
+.item2_text p {
+  font-family: "SF Pro Display", sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+
+.phones {
+  display: flex;
+}
+
+.phone {
+  margin-right: 32px;
+}
+
+.phone li {
+  margin-bottom: 12px;
+  font-family: "SF Pro Display", sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+
+.email p {
+  margin-bottom: 12px;
+}
+
+.bills {
+  font-family: "SF Pro Display", sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 20px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: #4865d9;
+  margin-top: 38px;
+  margin-bottom: 62px;
+}
+
+.people {
+  margin: auto;
+  max-width: 1520px;
+  margin-bottom: 127px;
+}
+
+.people h3 {
+  font-family: "SF Pro Display", sans-serif;
+  font-size: 40px;
+  font-weight: 600;
+  line-height: 40px;
+  letter-spacing: 0px;
+  text-align: left;
+  margin-bottom: 48px;
+  margin-top: 80px;
+}
+
+.people_cards {
+  display: grid;
+  grid-template-columns: 356px 356px 356px 356px;
+  grid-template-rows: auto;
+  justify-content: space-between;
+}
+
+.people_card h5 {
+  font-family: "SF Pro Display", sans-serif;
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 32px;
+  letter-spacing: 0px;
+  text-align: left;
+  margin-bottom: 32px;
+}
+
+.people_card ul li {
+  font-family: "SF Pro Display", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+
+.people_card ul li img {
+  margin-right: 8px;
+}
+
+.people_btn {
+  white-space: nowrap;
+  display: flex;
+  align-items: center;
+  width: 227px;
+  height: 48px;
+  padding: 18px 40px 18px 40px;
+  border-radius: 12px;
+  gap: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 56px;
+  background-color: #aeaeae;
+  font-family: "SF Pro Display", sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 20px;
+  letter-spacing: 0px;
+  text-align: left;
+}
+
+@media screen and (max-width: 1210px) {
+  .bills {
+    margin-left: 15px;
+  }
+  .item1_text,
+  .item2_text {
+    white-space: normal;
+    font-size: 20px;
+    padding-left: 24px;
+    padding-top: 16px;
+    width: 369px;
+    height: auto;
+  }
+  .catalog_btn {
+    margin-right: 8px;
+    margin-left: 8px;
+  }
+  .search_input {
+    width: 150px;
+    margin-right: 0px;
+  }
+  .nav_icons {
+    display: none;
+  }
+  .container {
+    justify-content: space-around;
+  }
+  .header {
+    display: none;
+  }
+  .header_search {
+    position: static;
+    margin-top: 0;
+  }
+  .drop_info li {
+    display: block;
+    text-align: center;
+    margin: 0;
+  }
+  /* .dropdown-menu.show {
+    position: absolute;
+    display: block;
+    min-width: 100%;
+    left: 0;
+  } */
+  .pos-f-t {
+    position: sticky;
+    display: block;
+    background-color: rgb(232, 234, 244);
+  }
+  .navbar {
+    position: static;
+    height: 57px;
+  }
+  .navbar-toggler {
+    position: absolute;
+    right: 0;
+  }
+  .nav-item a {
+    font-family: "SF Pro Display", sans-serif;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 20px;
+    letter-spacing: 0px;
+    text-align: left;
+  }
+  .contacts {
+    display: none;
+  }
+  .info {
+    display: none;
+  }
+  .contacts_section {
+    flex-direction: column;
+  }
+  .item1 {
+    margin-right: 0;
+    margin-bottom: 8px;
+  }
+}
+@media screen and (max-width: 1490px) {
+  .header_search_container img {
+    display: none;
+  }
+  .search_input {
+    width: 400px;
+    margin-right: 0px;
+  }
+  .drop_info li {
+    padding-bottom: 15px;
+    padding-top: 15px;
+  }
+  .icon_container_middle {
+    margin: 0;
+    padding-right: 25px;
+    padding-left: 25px;
+  }
+  .icon_container {
+    margin: 0;
+    padding-right: 25px;
+    padding-left: 25px;
+  }
+  .navbar_icons {
+    display: flex;
+    justify-content: space-around;
+  }
+  .footer_wrapper {
+    display: flex;
+    flex-direction: column;
+  }
+  .section {
+    margin-right: 0;
+  }
+  .section_social {
+    margin-right: 0;
+  }
+  .footer {
+    padding-top: 0px;
+  }
+  /* .footer_contacts {
+      flex-direction: column;
+    } */
+  .content {
+    margin-top: 0px;
+  }
+  .contacts_title {
+    margin-left: 15px;
+  }
+  .contacts_section {
+    margin: 15px 15px 15px 15px;
+  }
+  .map_section {
+    margin: 0 auto;
+    width: 80%;
+  }
+  .people h3 {
+    text-align: center;
+  }
+  .people_cards {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .people_card {
+    margin-bottom: 15px;
+  }
+  .people_card ul li,
+  .people_card h5 {
+    text-align: center;
+  }
+}
+@media screen and (max-width: 700px) {
+  .footer {
+    display: none;
+  }
+  .footer_mobile {
+    display: block;
+  }
+  .footer_m_wrapper {
+    max-width: none;
   }
 }/*# sourceMappingURL=style.css.map */
