--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -3221,9 +3221,9 @@ body {
     display: none;
   }
 
-  .info {
+  /* .info {
     display: none;
-  }
+  } */
 
   .contacts_section {
     flex-direction: column;
@@ -3236,9 +3236,6 @@ body {
 }
 
 @media screen and (max-width: 1490px) {
-  .header_search_container img {
-    display: none;
-  }
   .search_input {
     width: 400px;
     margin-right: 0px;
